--- a/Uebung03-1/index.html
+++ b/Uebung03-1/index.html
@@ -1,28 +1,30 @@
-
 <!DOCTYPE html>
-<html lang="de">
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <title>Uebung 3.1</title>
 
-    <title>Titel</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="wrapper">
-        <div class="person">
-          <img class="round"src="http://source.unsplash.com/1000x1000?kanye" alt="s hanno"/>
-          <div class="title">
-              Andi Moser
-          </div>
-          <div class="text">
-              Web Entwickler
-          </div>
-          <button>Kontaktieren</button>
-      </div>
-      </div>
+    <link href="index.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="containter">
+        <div class="wrapper">
+            <div class="person">
+                <div class="image">
+                    <img src="https://source.unsplash.com/1000x1000?person" alt="Sharukin">
+                </div>
+                <div class="text">
+                    <strong>Sharukin</strong><br>
+                    Web Entwickler
+                </div>
+                <div class="link">
+                    <a href="#" class="button">Kontaktieren</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </body>
+</body>
 </html>
-
